--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -45,7 +45,7 @@
 
   <h1 id="sous-titre">Le webzine de prépublication de bandes-dessinées</h1>
 
-  <div class="center-block image_header">
+  <div class="center-block text-center image_header">
     <a href="https://www.mangadraft.com/magazine/74-kippon-dream">
       <%= image_tag("lecture_webzine.png", alt: "bouton lecture magazines") %>
     </a>
@@ -56,9 +56,9 @@
   <div class="row">
     <article>
       <div class="col-md-offset-1 col-md-4 col-sm-12 voter-mag-papier">
-        <h1 class="col-md-offset-0 col-md-12 col-sm-offset-4 col-sm-4">Actualités</h1>
-        <p class="col-sm-12">Nous avons besoin de vous !</p>
-        <p class="col-sm-12">Répondez à ce sondage pour élire vos séries préférés (du numéro papier)</p>
+        <h1 class="col-xs-offset-4 col-xs-4 col-md-offset-0 col-md-12 col-sm-offset-4 col-sm-4">Actualités</h1>
+        <p class="col-xs-12 col-sm-12">Nous avons besoin de vous !</p>
+        <p class="col-xs-12 col-sm-12">Répondez à ce sondage pour élire vos séries préférés (du numéro papier)</p>
         <button type="button" class="btn btn-primary btn-lg-voter center-block" data-toggle="modal" data-target="#myModal">
           Voter ici
         </button>
@@ -93,7 +93,7 @@
     </article>
 
     <div class="row">
-    <div class="reseaux-sociaux col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10">
+    <div class="reseaux-sociaux col-xs-offset-1 col-xs-10 col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10">
       <p>Retrouvez-nous sur les réseaux sociaux pour avoir les dernières nouvelles, illustrations.. Promis on est pas méchants !</p>
       <div class="socialButs text-center">
         <a class="btn btn-primary" href="https://www.facebook.com/KipponDream/"><span class="fa fa-facebook fa-2x" aria-hidden="true"></span></a>
