--- a/app/views/pages/membres.html.erb
+++ b/app/views/pages/membres.html.erb
@@ -54,27 +54,27 @@
 
     <div class="row">
 
-      <div class="image-nom col-md-offset-1 col-md-2">
+      <div class="image-nom col-sm-offset-0 col-md-offset-1 col-sm-4 col-md-2">
           <%= image_tag('membres/Brandy.png', alt: 'brandy', :class => 'membres', :id => 'brandy') %>
         <p>Brandy</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Keops.png', alt: 'keops', :class => 'membres', :id => 'keops') %>
         <p>Keops</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Kimel.png', alt: 'kimel', :class => 'membres', :id => 'kimel') %>
         <p>Kimel</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Niko.png', alt: 'niko', :class => 'membres', :id => 'niko') %>
         <p>Niko</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Twildette.png', alt: 'twildette', :class => 'membres', :id => 'twildette') %>
         <p>Twildette</p>
       </div>
@@ -87,48 +87,42 @@
   <div class="container-fluid member-list">
 
     <h1 class="barre-membres">Les auteurs</h1>
-
-    <div class="row">
-      <div class="image-nom col-md-offset-1 col-md-2">
+      <div class="image-nom col-sm-offset-0 col-md-offset-1 col-sm-4 col-md-2">
           <%= image_tag('membres/Ataru.png', alt: 'ataru', :class => 'membres', :id => 'ataru') %>
         <p>Ataru</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Ayu.png', alt: 'ayu', :class => 'membres', :id => 'ayu') %>
         <p>Ayu</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Christ.png', alt: 'christ', :class => 'membres', :id => 'christ') %>
         <p>Christ</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Emueiichi.png', alt: 'emu eiichi', :class => 'membres', :id => 'emu') %>
         <p>Emu Eiichi</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/JulienMestre.png', alt: 'Julien Mestre', :class => 'membres', :id => 'julien') %>
-        <p>Julien <br />
-          Mestre</p>
+        <p>Julien Mestre</p>
       </div>
 
-    </div> <!-- row -->
-
-    <div class="row">
-      <div class="image-nom col-md-offset-1 col-md-2">
+      <div class="image-nom col-sm-offset-0 col-md-offset-1 col-sm-4 col-md-2">
           <%= image_tag('membres/Kowasu.png', alt: 'kowasu', :class => 'membres', :id => 'kowasu') %>
         <p>Kowasu</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Kuro.png', alt: 'kuro', :class => 'membres', :id => 'kuro') %>
         <p>Kuro</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Larryon.png', alt: 'Larryon', :class => 'membres', :id => 'larryon') %>
         <div class="modal fade" id="infos">
           <div class="modal-dialog modal-membres">
@@ -139,45 +133,40 @@
         <p>Larryon</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Lao.png', alt: 'Lao', :class => 'membres', :id => 'lao') %>
         <p>Lao</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Midori.png', alt: 'midiri', :class => 'membres', :id => 'midori') %>
         <p>Midori</p>
       </div>
 
-    </div> <!-- row -->
-
-    <div class="row">
-      <div class="image-nom col-md-offset-1 col-md-2">
+      <div class="image-nom col-sm-offset-0 col-md-offset-1 col-sm-4 col-md-2">
           <%= image_tag('membres/Oz.png', alt: 'Oz', :class => 'membres', :id => 'oz') %>
         <p>Oz</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Smaiky.png', alt: 'smaiky', :class => 'membres', :id => 'smaiky') %>
         <p>Smaiky</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/ThibaultDeboom.png', alt: 'Thibault Deboom', :class => 'membres', :id => 'thibault') %>
         <p>Thibault Deboom</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Unico.png', alt: 'unico', :class => 'membres', :id => 'unico') %>
         <p>Unico</p>
       </div>
 
-      <div class="image-nom col-md-2">
+      <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Yumi.png', alt: 'yumi', :class => 'membres', :id => 'yumi') %>
         <p>Yumi</p>
       </div>
-
-    </div> <!-- row -->
   </div> <!-- container-fluid -->
 </section>
 
