Page contact terminée (non opérationnelle). Bonne nuit. (5h21)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,10 @@
   </head>
   <body>
 
+  <% if flash[:success] %>
+      <div class="alert alert-success"><%= flash[:success] %></div>
+  <% end %>
+
   <%= yield %>
 
   <footer>
