--- a/app/views/pages/membres.html.erb
+++ b/app/views/pages/membres.html.erb
@@ -43,7 +43,8 @@
     </div>
   </nav>
   <div class="header-bloc">
-    <p>Vous l'avez voulu, le Kippon Dream l'a fait ! Découvrez chacun des membres de l'équipe avec ses quelques mots accompagnés d'un dessin autoportrait !</p>
+    <p>Vous l'avez voulu, le Kippon Dream l'a fait ! Découvrez chacun des membres de l'équipe avec
+      ses quelques mots accompagnés d'un dessin autoportrait !</p>
   </div>
 </header>
 
@@ -56,27 +57,27 @@
 
       <div class="image-nom col-sm-offset-0 col-md-offset-1 col-sm-4 col-md-2">
           <%= image_tag('membres/Brandy.png', alt: 'brandy', :class => 'membres', :id => 'brandy') %>
-        <p>Brandy</p>
+        <h2>Brandy</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Keops.png', alt: 'keops', :class => 'membres', :id => 'keops') %>
-        <p>Keops</p>
+        <h2>Keops</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Kimel.png', alt: 'kimel', :class => 'membres', :id => 'kimel') %>
-        <p>Kimel</p>
+        <h2>Kimel</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Niko.png', alt: 'niko', :class => 'membres', :id => 'niko') %>
-        <p>Niko</p>
+        <h2>Niko</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Twildette.png', alt: 'twildette', :class => 'membres', :id => 'twildette') %>
-        <p>Twildette</p>
+        <h2>Twildette</h2>
       </div>
 
     </div> <!-- row -->
@@ -89,37 +90,37 @@
     <h1 class="barre-membres">Les auteurs</h1>
       <div class="image-nom col-sm-offset-0 col-md-offset-1 col-sm-4 col-md-2">
           <%= image_tag('membres/Ataru.png', alt: 'ataru', :class => 'membres', :id => 'ataru') %>
-        <p>Ataru</p>
+        <h2>Ataru</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Ayu.png', alt: 'ayu', :class => 'membres', :id => 'ayu') %>
-        <p>Ayu</p>
+        <h2>Ayu</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Christ.png', alt: 'christ', :class => 'membres', :id => 'christ') %>
-        <p>Christ</p>
+        <h2>Christ</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Emueiichi.png', alt: 'emu eiichi', :class => 'membres', :id => 'emu') %>
-        <p>Emu Eiichi</p>
+        <h2>Emu Eiichi</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/JulienMestre.png', alt: 'Julien Mestre', :class => 'membres', :id => 'julien') %>
-        <p>Julien Mestre</p>
+        <h2>Julien Mestre</h2>
       </div>
 
       <div class="image-nom col-sm-offset-0 col-md-offset-1 col-sm-4 col-md-2">
           <%= image_tag('membres/Kowasu.png', alt: 'kowasu', :class => 'membres', :id => 'kowasu') %>
-        <p>Kowasu</p>
+        <h2>Kowasu</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Kuro.png', alt: 'kuro', :class => 'membres', :id => 'kuro') %>
-        <p>Kuro</p>
+        <h2>Kuro</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
@@ -130,42 +131,42 @@
             </div>
           </div>
         </div>
-        <p>Larryon</p>
+        <h2>Larryon</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Lao.png', alt: 'Lao', :class => 'membres', :id => 'lao') %>
-        <p>Lao</p>
+        <h2>Lao</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Midori.png', alt: 'midiri', :class => 'membres', :id => 'midori') %>
-        <p>Midori</p>
+        <h2>Midori</h2>
       </div>
 
       <div class="image-nom col-sm-offset-0 col-md-offset-1 col-sm-4 col-md-2">
           <%= image_tag('membres/Oz.png', alt: 'Oz', :class => 'membres', :id => 'oz') %>
-        <p>Oz</p>
+        <h2>Oz</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Smaiky.png', alt: 'smaiky', :class => 'membres', :id => 'smaiky') %>
-        <p>Smaiky</p>
+        <h2>Smaiky</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/ThibaultDeboom.png', alt: 'Thibault Deboom', :class => 'membres', :id => 'thibault') %>
-        <p>Thibault Deboom</p>
+        <h2>Thibault Deboom</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Unico.png', alt: 'unico', :class => 'membres', :id => 'unico') %>
-        <p>Unico</p>
+        <h2>Unico</h2>
       </div>
 
       <div class="image-nom col-sm-4 col-md-2">
           <%= image_tag('membres/Yumi.png', alt: 'yumi', :class => 'membres', :id => 'yumi') %>
-        <p>Yumi</p>
+        <h2>Yumi</h2>
       </div>
   </div> <!-- container-fluid -->
 </section>
