--- a/app/views/pages/magazines.html.erb
+++ b/app/views/pages/magazines.html.erb
@@ -60,7 +60,7 @@
 
 <section class="derniere_sortie">
   <div class="row">
-    <div class="col-sm-offset-4 col-sm-4 col-md-offset-0 col-md-4">
+    <div class="col-xs-offset-4 col-xs-4 col-sm-offset-4 col-sm-4 col-md-offset-0 col-md-4">
       <div class="dernier_numero">
         <h1>Dernière sortie</h1>
         <p>Numéro #15</p>
@@ -70,7 +70,7 @@
       </div>
     </div>
 
-    <div class="col-sm-6 col-md-4">
+    <div class="col-xs-12 col-sm-6 col-md-4">
       <div class="description_numero">
         <p >Dans ce dernier numéro du Kippon Dream, retrouvez les séries Païn et infinite revenge.</p>
         <p>Vous découvrirez:</p>
@@ -81,8 +81,8 @@
       </div>
     </div>
 
-    <div class="col-sm-5 col-md-4">
-      <%= image_tag('magazines/couv_mag15', alt:'couverture Kippon Dream 15', :class => 'center-block')%>
+    <div class="col-xs-12 col-sm-5 col-md-4">
+      <%= image_tag('magazines/couv_mag15', alt:'couverture Kippon Dream 15', :class => 'center-block couv-derniere-sortie')%>
     </div>
   </div>
 </section>
@@ -130,6 +130,8 @@
       </div> <!-- col md 12 -->
     </div> <!-- row -->
 
+    <hr />
+
     <!-----------------------------------------
     NUMERO 1
     ------------------------------------------>
@@ -168,6 +170,8 @@
       </div> <!-- col md 12 -->
     </div> <!-- row -->
 
+    <hr />
+
     <!-----------------------------------------
     NUMERO 2
     ------------------------------------------>
@@ -205,6 +209,8 @@
       </div> <!-- col md 12 -->
     </div> <!-- row -->
 
+    <hr />
+
     <!---------------------------
     NUMERO 3
    ---------------------------->
@@ -240,6 +246,8 @@
         </div> <!-- col md 8 -->
       </div> <!-- col md 12 -->
     </div> <!-- row -->
+
+    <hr />
 
     <!----------------------------
     NUMERO 4
@@ -277,6 +285,8 @@
       </div> <!-- col md 12 -->
     </div> <!-- row -->
 
+    <hr />
+
     <!---------------------------------
     NUMERO 5
    ----------------------------------->
@@ -311,6 +321,8 @@
         </div> <!-- col md 8 -->
       </div> <!-- col md 12 -->
     </div> <!-- row -->
+
+    <hr />
 
     <!------------------------------------
     NUMERO 6
@@ -365,6 +377,8 @@
         </div> <!-- col md 12 -->
       </div> <!-- row -->
 
+       <hr />
+
       <!-------------------------------------
       NUMERO 7
       -------------------------------------->
@@ -409,6 +423,8 @@
             </div> <!-- col md 8 -->
           </div> <!-- col md 12 -->
         </div> <!-- row -->
+
+    <hr />
 
         <!-----------------------------------
         NUMERO 8
@@ -455,6 +471,8 @@
           </div> <!-- col md 12 -->
         </div> <!-- row -->
 
+    <hr />
+
         <!---------------------------------------
         NUMERO 9
         ---------------------------------------->
@@ -495,6 +513,8 @@
           </div> <!-- col md 12 -->
         </div> <!-- row -->
 
+    <hr />
+
         <!----------------------------------------
         NUMERO 10
         ----------------------------------------->
@@ -531,6 +551,8 @@
           </div> <!-- col md 12 -->
         </div> <!-- row -->
 
+    <hr />
+
         <!----------------------------------------
         NUMERO 11
         ----------------------------------------->
@@ -566,6 +588,8 @@
             </div> <!-- col md 8 -->
           </div> <!-- col md 12 -->
         </div> <!-- row -->
+
+    <hr />
 
         <!----------------------------------
         NUMERO 12
@@ -615,6 +639,8 @@
           </div> <!-- col md 12 -->
         </div> <!-- row -->
 
+    <hr />
+
         <!---------------------------------------
         NUMERO 13
         ---------------------------------------->
@@ -661,6 +687,8 @@
           </div> <!-- col md 12 -->
         </div> <!-- row -->
 
+    <hr />
+
         <!----------------------------------------
         NUMERO 14
         ----------------------------------------->
@@ -696,6 +724,8 @@
             </div> <!-- col md 8 -->
           </div> <!-- col md 12 -->
         </div> <!-- row -->
+
+    <hr />
 
         <!---------------------------------------
         NUMERO 15
@@ -734,6 +764,8 @@
             </div> <!-- col md 8 -->
           </div> <!-- col md 12 -->
         </div> <!-- row -->
+
+    <hr />
       </div> <!-- cadre -->
     </div>
   </div>
