--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -42,4 +42,8 @@
 		</div>
 		</div>
 	</nav>
+</header>
 
+	<div class="text-center">
+		<%= image_tag('construction.png', width: '100%') %>
+	</div>
