--- a/app/views/pages/membres.html.erb
+++ b/app/views/pages/membres.html.erb
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="" class="navbar-brand">Kippon Dream</a> <!-- rediriger vers l'accueil -->
+      <%= link_to('Kippon Dream', '/', :class => 'navbar-brand' ) %>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
@@ -42,6 +42,7 @@
     </div>
     </div>
   </nav>
+
   <div class="header-bloc">
     <p>Vous l'avez voulu, le Kippon Dream l'a fait ! Découvrez chacun des membres de l'équipe avec
       ses quelques mots accompagnés d'un dessin autoportrait !</p>
