--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,60 @@
+<header>
+  <!-- NAV ORDI -->
+  <nav class="navbar navbar-static-top navbar-sd">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav">
+					<span class="barre_nav1">
+						<li> <%= link_to('MAGAZINES', '/magazines') %></li>
+						<li> <%= link_to('SERIES', '/series') %></li>
+						<li> <%= link_to('ACTUALITES', '/actu') %></li>
+					</span>
+        <li>
+          <%= link_to image_tag('KD.png',:class=> 'header-logo', alt: 'Logo menu kippon Dream'), '/', :class => 'index-lien' %>
+        </li>
+        <span class="barre_nav2">
+					<li> <%= link_to('MEMBRES', '/membres') %></li>
+					<li> <%= link_to('CONTACT', '/contact') %></li>
+					<li> <%= link_to('BOUTIQUE', '/boutique') %></li>
+					</span>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- NAV TABLETTE MOBILE -->
+  <nav class="navbar navbar-inverse navbar-fixed-top navbar-sm">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to('Kippon Dream', '/', :class => 'navbar-brand' ) %>
+    </div>
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li> <%= link_to('MAGAZINES', '/magazines') %></li>
+        <li> <%= link_to('SERIES', '/series') %></li>
+        <li> <%= link_to('ACTUALITES', '/actu') %></li>
+        <li> <%= link_to('MEMBRES', '/membres') %></li>
+        <li> <%= link_to('CONTACT', '/contact') %></li>
+        <li> <%= link_to('BOUTIQUE', '/boutique') %></li>
+      </ul>
+    </div>
+    </div>
+  </nav>
+
+  <h1 id="sous-titre">Le webzine de prépublication de bandes-dessinées</h1>
+
+  <div class="center-block image_header">
+    <a href="https://www.mangadraft.com/magazine/74-kippon-dream">
+      <%= image_tag("lecture_webzine.png", alt: "bouton lecture magazines") %>
+    </a>
+  </div>
+</header>
+
+
+
+
 <%= simple_form_for (@contact), :html => { :class => 'iciLaClasseDuBordel'} do |f| %>
 
     <h1>Contact</h1>
