--- a/app/views/pages/actualites.html.erb
+++ b/app/views/pages/actualites.html.erb
@@ -28,7 +28,8 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a href="" class="navbar-brand">Kippon Dream</a> <!-- rediriger vers l'accueil -->
+			<!--<a href="" class="navbar-brand">Kippon Dream</a> &lt;!&ndash; rediriger vers l'accueil &ndash;&gt;-->
+			<%= link_to('Kippon Dream', '/', :class => 'navbar-brand' ) %>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
