--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -28,7 +28,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="" class="navbar-brand">Kippon Dream</a> <!-- rediriger vers l'accueil -->
+        <%= link_to('Kippon Dream', '/', :class => 'navbar-brand' ) %>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
