--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -462,6 +462,16 @@ article h1 {
     margin-top: -60px;
 }
 
+/* CONTACT */
+
+form {
+    margin: 20px;
+}
+
+.btn-envoyer {
+    margin-right: 30px;
+}
+
 /* MENU NON COLLAPSÉ JUSQU'A CE QUE L'ÉCRAN FASSE 1000PX DE LARGE */
 @media (max-width: 1000px) {
     .navbar-header {
