--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -43,31 +43,49 @@
     </div>
   </nav>
 
-  <h1 id="sous-titre">Le webzine de prépublication de bandes-dessinées</h1>
 
-  <div class="center-block image_header">
-    <a href="https://www.mangadraft.com/magazine/74-kippon-dream">
-      <%= image_tag("lecture_webzine.png", alt: "bouton lecture magazines") %>
-    </a>
-  </div>
 </header>
 
+<!-- Rajouter une colonne "pseudo" dans le MCD -->
+<!-- Y'en aura d'autres en plus mdr -->
+
+<%= simple_form_for (@contact), :html => { :class => 'form-horizontal'} do |f| %>
+
+    <div class="row">
+
+      <div class="form-group col-xs-12 col-sm-12 col-md-12">
+        <%= f.label :nom, :class => 'col-xs-2 col-sm-2 col-md-2' %>
+        <%= f.text_field :nom, :autofocus => true, :placeholder => 'Votre nom', :class => 'col-xs-10 col-sm-10 col-md-10' %>
+      </div>
+
+      <div class="form-group col-xs-12 col-sm-12 col-md-12">
+        <%= f.label :email, :class => 'col-xs-2 col-sm-2 col-md-2' %>
+        <%= f.text_field :email, :placeholder => 'ex : contact@kippondream.com', :class => 'col-xs-10 col-sm-10 col-md-10' %>
+      </div>
+
+      <div class="form-group col-xs-12 col-sm-12 col-md-12">
+        <%= f.label :objet, :class => 'col-xs-2 col-sm-2 col-md-2' %>
+        <%= f.text_field :objet, :placeholder => 'ex : Concours, dream cup...', :class => 'col-xs-10 col-sm-10 col-md-10' %>
+      </div>
+
+      <div class="form-group col-xs-12 col-sm-12 col-md-12">
+        <%= f.label :message, :class => 'col-xs-2' %>
+          <%= f.text_area :message, :placeholder => 'Tapez votre message ici', :class => 'col-xs-10' %>
+      </div>
+
+      <%= f.submit 'Envoyer', { class: 'pull-right btn-envoyer' } %>
+
+<!--
+        <select name="objet" id="objet" class="col-xs-10 col-sm-10 col-md-10">
+          <option value="Recrutement">Recrutement</option>
+          <option value="Renseignement">Renseignement</option>
+          <option value="Concours">Concours</option>
+          <option value="Dream Cup">Dream Cup</option>
+        </select>
+      </div>-->
 
 
-
-<%= simple_form_for (@contact), :html => { :class => 'iciLaClasseDuBordel'} do |f| %>
-
-    <h1>Contact</h1>
-
-    <!-- là tel que c'est, y'a juste le champ de texte sans le label -->
-    <!-- Le label ressemble à ça -->
-    <!-- <%= f.label :nom, :class => 'test' %> -->
-
-    <%= f.text_field :nom, :autofocus => true, :placeholder => 'Nom', :class => 'classe' %>
-    <%= f.text_field :email, :placeholder => 'E-mail', :class => 'classe' %>
-    <%= f.text_field :objet, :placeholder => 'Objet', :class => 'classe' %>
-    <%= f.text_area :message, :placeholder => 'Tapez votre message ici', :class => 'classe' %>
-    <%= f.submit 'Envoyer', { class: 'classe' } %>
+  </div> <!-- row -->
 
 
   <% end %>
