mise en page contact

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -468,8 +468,8 @@ form {
     margin: 20px;
 }
 
-.btn-envoyer {
-    margin-right: 30px;
+.page-contact {
+    height: 470px;
 }
 
 /* MENU NON COLLAPSÉ JUSQU'A CE QUE L'ÉCRAN FASSE 1000PX DE LARGE */
