modif footer, mise en page du formulaire contact

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -44,8 +44,9 @@
   </nav>
 
   <div class="header-bloc">
-    <p>Vous l'avez voulu, le Kippon Dream l'a fait ! Découvrez chacun des membres de l'équipe avec
-      ses quelques mots accompagnés d'un dessin autoportrait !</p>
+    <p>Vous souhaitez nous contacter ? Entrer dans l'équipe ? Vous vous demandez quand aura lieu
+      la prochaine Dream Cup ? Vous êtes au bon endroit ! Envoyez-nous toutes vos questions,
+    demandes et autres. </p>
   </div>
 
 </header>
