--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -117,11 +117,12 @@ li img {
 
 footer {
     background-color: #f69c00;
+    padding-top: 30px;
 }
 
 footer p {
     text-align: center;
-    font-size: 2em;
+    font-size: 1.4em;
     color: white;
 }
 
@@ -129,8 +130,18 @@ footer p:nth-child(3) {
     margin-bottom: 20px;
 }
 
+footer ul {
+    list-style-type: none;
+    margin-top: 20px;
+}
+
+footer li {
+    font-size: 1.4em;
+}
+
 .mentions {
     background-color: #242424;
+    margin-top: 30px;
     padding-top: 30px;
     padding-bottom: 20px;
 }
